# longhorn-game-engine

./: .gitignore  3D_GIZMOS_COMPLETE.md  3D_GIZMOS_FINAL_SOLUTION.md  3D_GIZMOS_IMPLEMENTATION.md  3D_GIZMOS_IMPLEMENTATION_PLAN.md  3D_GIZMOS_OBJECT_SCALED.md  3D_GIZMOS_SOLUTION.md  3D_GIZMO_INPUT_IMPLEMENTATION.md  CI_CHANGES.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEBUG_3D_GIZMOS.md  GIZMOS_FINAL_STATUS.md  LICENSE  Makefile  PHASE_19_SUMMARY.md  README.md  UNITY_GIZMOS_TEST_SUMMARY.md  run_editor.sh  test_archetype_simple.rs  test_dragdrop_manual.md  test_dragdrop_remote.sh  test_hierarchy.sh
crates/application/engine-editor-app/: Cargo.toml
crates/application/engine-editor-app/src/: editor_coordinator.rs  editor_state.rs  main.rs  play_state.rs  types.rs  world_setup.rs
crates/application/engine-editor-assets/: Cargo.toml  README.md
crates/application/engine-editor-assets/src/: asset_cache.rs  asset_loader.rs  lib.rs  texture_manager.rs  types.rs
crates/application/engine-editor-control/: Cargo.toml
crates/application/engine-editor-control/src/: client.rs  commands.rs  lib.rs  server.rs  types.rs
crates/application/engine-editor-egui/: Cargo.toml  README.md
crates/application/engine-editor-egui/benches/: compilation_benchmark.rs
crates/application/engine-editor-egui/src/: editor_coordinator.rs  editor_state.rs  lib.rs  main.rs  play_state.rs  scene_renderer.rs  scene_shader.wgsl  settings.rs  types.rs  utils.rs  world_setup.rs
crates/application/engine-editor-egui/tests/: asset_management_extraction_test.rs  cube_rendering_test.rs  editor_framework_extraction_test.rs  editor_integration_test.rs  editor_panels_extraction_test.rs  end_to_end_test.rs  import_integration_test.rs  mesh_migration_test.rs  new_mesh_system_integration_test.rs  scene_renderer_test.rs  scene_view_extraction_test.rs
crates/application/engine-editor-framework/: Cargo.toml  README.md
crates/application/engine-editor-framework/src/: editor_coordinator.rs  editor_state.rs  entity_memento_tests.rs  lib.rs  play_state.rs  play_state_snapshot_tests.rs  snapshot_integration_tests.rs  types.rs  unified_coordinator.rs  world_setup.rs  world_snapshot.rs  world_snapshot_tests.rs
crates/application/engine-editor-framework/tests/: hot_reload_integration_test.rs  unified_coordinator_test.rs
crates/application/engine-editor-panels/: Cargo.toml  README.md
crates/application/engine-editor-panels/src/: console.rs  drag_drop.rs  folder_manager.rs  game_view.rs  hierarchy.rs  inspector.rs  keyboard_shortcuts.rs  lib.rs  multi_selection.rs  project.rs  search.rs  types.rs  undo_redo.rs
crates/application/engine-editor-scene-view/: Cargo.toml  README.md
crates/application/engine-editor-scene-view/src/: lib.rs  types.rs
crates/application/engine-editor-ui/: Cargo.toml  README.md
crates/core/engine-audio-core/: Cargo.toml  README.md
crates/core/engine-camera-core/: COORDINATE_SYSTEM.md  Cargo.toml  README.md
crates/core/engine-components-3d/: Cargo.toml  README.md
crates/core/engine-components-core/: Cargo.toml
crates/engine-audio/: Cargo.toml
crates/engine-audio/src/: effects.rs  manager.rs  mixer.rs  source.rs
crates/engine-camera/: Cargo.toml
crates/engine-camera/src/: camera.rs  culling.rs  projection.rs  viewport.rs
crates/engine-editor/: Cargo.toml
crates/engine-editor-egui/: Cargo.toml
crates/engine-editor-egui/src/: main.rs
crates/engine-editor/src/: ecs_editor_state.rs  lib.rs  main.rs  settings_app.rs  settings_main.rs
crates/engine-graphics/: Cargo.toml
crates/engine-graphics/examples/: ecs_renderer_test.rs  multi_camera_demo.rs  simple_multi_camera_demo.rs
crates/engine-graphics/src/: lib.rs  multi_camera_renderer.rs  renderer.rs  shaders.rs
crates/engine-physics/: Cargo.toml
crates/engine-physics/src/: lib.rs  queries.rs
crates/engine-platform/: Cargo.toml
crates/engine-platform/src/: lib.rs  system.rs  threading.rs
crates/engine-renderer-3d-examples/: Cargo.toml
crates/engine-renderer-3d-examples/examples/: advanced_camera_test.rs  complete_pipeline_test.rs  complete_resource_test.rs  cube_test.rs  ecs_integration_test.rs  frustum_culling_test.rs  render_queue_test.rs  resource_management_test.rs  simple_triangle.rs
crates/engine-renderer-3d-examples/src/: lib.rs
crates/engine-renderer-3d-examples/tests/: examples_build_test.rs
crates/engine-ui/: Cargo.toml
crates/engine-ui-system/: Cargo.toml  README.md
crates/engine-ui-system/examples/: constraint_editor.rs  theme_demo.rs
crates/engine-ui-system/src/: colors.rs  design_constraints.rs  design_loader.rs  lib.rs  spacing.rs  theme.rs  typography.rs  utils.rs
crates/engine-ui/src/: events.rs  lib.rs  theme.rs
crates/longhorn-editor/: Cargo.toml
crates/longhorn-editor/src/: asset_browser_state.rs  camera.rs  commands.rs  console.rs  docking.rs  editor.rs  lib.rs  project.rs  project_panel_state.rs  remote.rs  remote_server.rs  script_editor_state.rs  snapshot.rs  state.rs  texture_picker.rs  toolbar.rs  ui_state.rs  viewport_renderer.rs
crates/longhorn-engine/: Cargo.toml
crates/longhorn-engine/src/: config.rs  engine.rs  game.rs  lib.rs
crates/longhorn-engine/tests/: project_loading.rs
crates/longhorn-mobile/: Cargo.toml
crates/longhorn-mobile/src/: app.rs  lib.rs  platform.rs
crates/longhorn-renderer/: Cargo.toml
crates/longhorn-renderer/src/: camera.rs  color.rs  lib.rs  renderer.rs  sprite_batch.rs  texture.rs
crates/longhorn-scripting/: Cargo.toml
crates/longhorn-scripting/api/: longhorn.d.ts
crates/longhorn-scripting/examples/: run_script.rs
crates/longhorn-scripting/src/: bootstrap.js  compiler.rs  js_runtime.rs  lib.rs  ops.rs  runtime.js  runtime.rs
crates/longhorn-scripting/tests/: integration.rs  ops_integration.rs
crates/longhorn-test-client/: Cargo.toml
crates/longhorn-test-client/src/: client.rs  error.rs  harness.rs  lib.rs  responses.rs
crates/longhorn-test-client/tests/: editor_assets.rs  editor_e2e.rs  editor_entity.rs  editor_sprites.rs  editor_state.rs  editor_ui.rs
editor/: Cargo.toml
editor/src/: main.rs
(+899 files in other folders)
