[workspace]
resolver = "2"
members = [
    "crates/longhorn-core",
    "crates/longhorn-renderer",
    "crates/longhorn-input",
    "crates/longhorn-assets",
    "crates/longhorn-scripting",
    "crates/longhorn-engine",
    "crates/longhorn-mobile",
    "crates/longhorn-editor",
    "crates/longhorn-events",
    "crates/longhorn-test-client",
    "crates/longhorn-remote",
    "editor",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/user/longhorn-game-engine-v2"

[workspace.dependencies]
# ECS
hecs = "0.10"

# Math
glam = { version = "0.27", features = ["serde"] }

# Rendering
wgpu = "22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Windowing
winit = "0.30"
raw-window-handle = "0.6"

# Editor
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "persistence"] }

# Scripting
rquickjs = { version = "0.10", features = ["classes", "properties", "parallel", "bindgen"] }
# Note: SWC integration can be added later for production-grade TS compilation
# For now, use simple regex-based type stripping (MVP approach)

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Internal crates
longhorn-core = { path = "crates/longhorn-core" }
longhorn-renderer = { path = "crates/longhorn-renderer" }
longhorn-input = { path = "crates/longhorn-input" }
longhorn-assets = { path = "crates/longhorn-assets" }
longhorn-scripting = { path = "crates/longhorn-scripting" }
longhorn-engine = { path = "crates/longhorn-engine" }
longhorn-mobile = { path = "crates/longhorn-mobile" }
longhorn-editor = { path = "crates/longhorn-editor" }
longhorn-events = { path = "crates/longhorn-events" }
longhorn-test-client = { path = "crates/longhorn-test-client" }
longhorn-remote = { path = "crates/longhorn-remote" }
