[package]
name = "editor"
version.workspace = true
edition.workspace = true

[[bin]]
name = "longhorn-editor"
path = "src/main.rs"

[dependencies]
longhorn-core = { workspace = true }
longhorn-engine = { workspace = true }
longhorn-editor = { workspace = true }

# Windowing
winit = { workspace = true }

# Graphics - use wgpu 22 to match egui-wgpu
wgpu = { version = "22.1", default-features = true }

# UI
egui = { workspace = true }
egui-wgpu = "0.29"
egui-winit = "0.29"

# Utils
pollster = "0.4"
env_logger = { workspace = true }
log = { workspace = true }
glam = { workspace = true }
