[package]
name = "editor"
version.workspace = true
edition.workspace = true

[[bin]]
name = "longhorn-editor"
path = "src/main.rs"

[dependencies]
longhorn-core = { workspace = true }
longhorn-engine = { workspace = true }
longhorn-editor = { workspace = true }
longhorn-remote = { workspace = true }

# Windowing
winit = { workspace = true }

# Graphics - use wgpu 22 to match egui-wgpu
wgpu = { version = "22.1", default-features = true }

# UI
egui = { workspace = true }
egui-wgpu = "0.29"
egui-winit = "0.29"

# Utils
pollster = "0.4"
env_logger = { workspace = true }
log = { workspace = true }
glam = { workspace = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tracing-log = "0.2"
