[package]
name = "engine-editor-egui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "unity-editor-egui"
path = "src/main.rs"

[dependencies]
# Engine core integration
engine-core = { path = "../engine-core" }
engine-camera = { path = "../engine-camera" }

# EGUI and platform integration
egui = "0.28"
eframe = { version = "0.28", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
egui_dock = "0.13"  # For dockable panels

# Utilities
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.10"