[package]
name = "engine-editor"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "unity-editor"
path = "src/main.rs"

[[bin]]
name = "engine-settings"
path = "src/settings_main.rs"

[dependencies]
engine-core = { workspace = true }
engine-ui-system = { workspace = true }
gtk4 = { workspace = true }
glib = { workspace = true }
gio = { workspace = true }
libadwaita = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde_json = { workspace = true }
notify = { workspace = true }