[package]
name = "engine-graphics"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
engine-core = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
tokio = { workspace = true }
env_logger = { workspace = true }