[package]
name = "engine-physics"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
engine-core = { workspace = true }
rapier2d = { workspace = true }
rapier3d = { workspace = true }
glam = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"