[package]
name = "engine-renderer-3d-examples"
version = "0.1.0"
edition = "2021"
description = "Examples for the engine-renderer-3d crate"

# This crate is only for examples, so lib.rs is minimal
[lib]
path = "src/lib.rs"

[dependencies]
engine-renderer-3d = { path = "../implementation/engine-renderer-3d" }
wgpu = "0.20"
winit = "0.29"
bytemuck = { version = "1.13", features = ["derive"] }
glam = "0.24"
egui = "0.28"
egui-wgpu = "0.28"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
pollster = "0.3"
tokio = { version = "1.0", features = ["full"] }

# Internal dependencies
engine-ecs-core = { path = "../core/engine-ecs-core" }
engine-components-3d = { path = "../core/engine-components-3d" }
engine-component-traits = { path = "../core/engine-component-traits" }
engine-camera-impl = { path = "../implementation/engine-camera-impl" }

[[example]]
name = "simple_triangle"

[[example]]
name = "cube_test"

[[example]]
name = "resource_management_test"

[[example]]
name = "complete_resource_test"

[[example]]
name = "ecs_integration_test"

[[example]]
name = "render_queue_test"

[[example]]
name = "frustum_culling_test"

[[example]]
name = "complete_pipeline_test"

[[example]]
name = "advanced_camera_test"
