[package]
name = "longhorn-editor"
version.workspace = true
edition.workspace = true

[dependencies]
longhorn-core = { workspace = true }
longhorn-engine = { workspace = true }
longhorn-renderer = { workspace = true }
longhorn-scripting = { workspace = true }

egui = { workspace = true }
egui-wgpu = "0.29"
wgpu = { workspace = true }
glam = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
hecs = { workspace = true }
bytemuck = { version = "1.14", features = ["derive"] }
image = { workspace = true }
