[package]
name = "longhorn-editor"
version.workspace = true
edition.workspace = true

[dependencies]
longhorn-core = { workspace = true }
longhorn-engine = { workspace = true }
longhorn-renderer = { workspace = true }
longhorn-scripting = { workspace = true }
longhorn-events = { workspace = true }
longhorn-assets = { workspace = true }

egui = { workspace = true }
egui-wgpu = "0.29"
egui_dock = "0.14"
wgpu = { workspace = true }
glam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
hecs = { workspace = true }
bytemuck = { version = "1.14", features = ["derive"] }
image = { workspace = true }
open = "5"
rfd = "0.15"
pollster = "0.4"

[dev-dependencies]
tempfile = "3"
