[package]
name = "longhorn-engine"
version.workspace = true
edition.workspace = true

[dependencies]
longhorn-core = { workspace = true }
longhorn-renderer = { workspace = true }
longhorn-input = { workspace = true }
longhorn-assets = { workspace = true }
longhorn-scripting = { workspace = true }
glam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
wgpu = { workspace = true }
