[package]
name = "longhorn-mobile"
version.workspace = true
edition.workspace = true

[dependencies]
longhorn-engine = { workspace = true }
longhorn-input = { workspace = true }
longhorn-core = { workspace = true }
winit = { workspace = true }
raw-window-handle = { workspace = true }
log = { workspace = true }
