[package]
name = "longhorn-scripting"
version.workspace = true
edition.workspace = true

[dependencies]
longhorn-core = { workspace = true }
longhorn-input = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
deno_core = { workspace = true }
