[package]
name = "engine-editor-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Main application entry point for the Longhorn Game Engine editor"
authors.workspace = true
keywords.workspace = true
categories.workspace = true

# TODO: Move binary here once extraction is complete
# [[bin]]
# name = "longhorn-editor"
# path = "src/main.rs"

[dependencies]
# External
eframe = { workspace = true }
egui = { workspace = true }
egui_dock = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
wgpu = { workspace = true }
glam = { workspace = true }
anyhow = { workspace = true }
pollster = { workspace = true }

# Internal - editor crates
engine-editor-scene-view = { path = "../engine-editor-scene-view" }
engine-editor-panels = { path = "../engine-editor-panels" }
engine-editor-ui = { path = "../engine-editor-ui" }

# Internal - core
engine-ecs-core = { workspace = true }
engine-components-3d = { workspace = true }
engine-components-2d = { workspace = true }
engine-components-ui = { workspace = true }
engine-renderer-3d = { workspace = true }
engine-geometry-core = { workspace = true }
engine-geometry-impl = { workspace = true }
engine-resource-core = { workspace = true }
engine-camera-impl = { workspace = true }
