[package]
name = "engine-editor-egui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "longhorn-editor"
path = "src/main.rs"

[dependencies]
# Engine core integration
engine-ecs-core = { workspace = true }
engine-component-traits = { workspace = true }
engine-components-3d = { workspace = true }
engine-components-2d = { workspace = true }
engine-components-ui = { workspace = true }
engine-renderer-3d = { workspace = true }
engine-geometry-core = { workspace = true }
engine-geometry-impl = { workspace = true }
engine-resource-core = { workspace = true }
engine-materials-core = { workspace = true }

# EGUI and platform integration
egui = { workspace = true }
eframe = { workspace = true }
egui_dock = { workspace = true }

# Utilities
serde = { workspace = true }
env_logger = { workspace = true }
toml = "0.8"
dirs = "5.0"

# WGPU integration
wgpu = { workspace = true }
winit = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
pollster = { workspace = true }