[package]
name = "engine-editor-panels"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Editor panels for the Longhorn Game Engine"
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# External
eframe = { workspace = true }
egui = { workspace = true }
log = { workspace = true }

# Internal - core
engine-ecs-core = { workspace = true }
engine-components-3d = { workspace = true }
engine-components-2d = { workspace = true }
engine-components-ui = { workspace = true }
engine-renderer-3d = { workspace = true }
engine-resource-core = { workspace = true }
engine-geometry-core = { workspace = true }
engine-scripting = { workspace = true }

# Math
glam = { workspace = true }

# For shared types
engine-editor-scene-view = { path = "../engine-editor-scene-view" }
engine-editor-assets = { path = "../engine-editor-assets" }

[dev-dependencies]
tempfile = "3.8"
