[package]
name = "engine-editor-scene-view"
version = "0.1.0"
edition = "2021"
description = "Scene view panel for the Longhorn Game Engine editor"

[dependencies]
# External
eframe = "0.28"
egui = "0.28"
glam = "0.24"
log = "0.4"
wgpu = "0.20"
anyhow = "1.0"
pollster = "0.3"

# Internal - rendering
engine-renderer-3d = { path = "../../implementation/engine-renderer-3d" }

# Internal - core
engine-ecs-core = { path = "../../core/engine-ecs-core" }
engine-components-3d = { path = "../../core/engine-components-3d" }
engine-components-2d = { path = "../../core/engine-components-2d" }
engine-components-ui = { path = "../../core/engine-components-ui" }
engine-component-traits = { path = "../../core/engine-component-traits" }

# Internal - camera
engine-camera-impl = { path = "../../implementation/engine-camera-impl" }

[dev-dependencies]
