[package]
name = "engine-editor-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "UI components and styling for the Longhorn Game Engine editor"
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# External
eframe = { workspace = true }
egui = { workspace = true }
egui_dock = { workspace = true }
serde = { workspace = true }
toml = "0.8"
dirs = "5.0"

# Internal
engine-ecs-core = { workspace = true }
engine-components-3d = { workspace = true }
engine-editor-scene-view = { path = "../engine-editor-scene-view" }
engine-editor-panels = { path = "../engine-editor-panels" }
