[package]
name = "engine-audio-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core engine integration
engine-ecs-core = { workspace = true }
engine-components-3d = { workspace = true }

# Math and utilities
glam = { workspace = true }
serde = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
log = { workspace = true }

[features]
default = []
debug = []