[package]
name = "engine-audio-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core audio functionality for Longhorn Game Engine"

[dependencies]
# Core engine integration
engine-ecs-core = { workspace = true }
engine-components-3d = { workspace = true }

# Math and utilities
glam = { workspace = true }
serde = { workspace = true }

# Error handling
thiserror = { workspace = true }

[features]
default = []
debug = []
