[package]
name = "engine-camera-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core engine integration
engine-ecs-core = { workspace = true }

# Math and graphics
glam = { version = "0.24", features = ["serde"] }
bytemuck = { version = "1.14", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"

# Bitflags for dirty state management
bitflags = "2.4"

[features]
default = []
debug = []