[package]
name = "engine-camera-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core camera functionality for Longhorn Game Engine"

[dependencies]
# Core engine integration
engine-component-traits = { workspace = true }
engine-components-3d = { workspace = true }
engine-components-ui = { workspace = true }

# Math and graphics
glam = { workspace = true }
bytemuck = { workspace = true }

# Serialization
serde = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
log = { workspace = true }

# Bitflags for dirty state management
bitflags = { workspace = true }

[features]
default = []
debug = []
