[package]
name = "engine-components-3d"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "components 3d for Longhorn Game Engine"

[dependencies]
engine-component-traits = { path = "../engine-component-traits" }
engine-ecs-core = { path = "../engine-ecs-core" }
engine-resource-core = { path = "../engine-resource-core" }
engine-geometry-core = { path = "../engine-geometry-core" }
engine-materials-core = { path = "../engine-materials-core" }
serde = { workspace = true }
glam = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
