[package]
name = "engine-components-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
glam = { workspace = true }
engine-ecs-core = { workspace = true }

[dev-dependencies]
# Test dependencies if needed